scaffolding work from August 2nd

--- a/otb.cfg
+++ b/otb.cfg
@@ -21,8 +21,9 @@ process {
         container = 'dmolik/shhquis'
     }
 }
+
 singularity {
     enabled = true
 }
 
-process gfa2fasta {}
+# process gfa2fasta {}
