intial scaffolding done

--- a/otb.cfg
+++ b/otb.cfg
@@ -20,10 +20,12 @@ process {
     withName:Shhquis.jl {
         container = 'dmolik/shhquis'
     }
+    withName:faidx {
+        container = 'biocontainers/samtools:v1.9-4-deb_cv1'
+    }
 }
 
 singularity {
     enabled = true
 }
 
-# process gfa2fasta {}
