ready for dry run

--- a/otb.cfg
+++ b/otb.cfg
@@ -1,4 +1,7 @@
 process {
+    executor='slurm'
+    clusterOptions=params.clusterOptions ? "$params.clusterOptions" : "-N 1 -n ${params.threads} -t 04:00:00"
+
     withName:stats.sh {
         container = 'bryce911/bbtools'
     }
