--- a/otb.cfg
+++ b/otb.cfg
@@ -1,8 +1,14 @@
 process {
     executor='slurm'
-    clusterOptions=params.clusterOptions ? "$params.clusterOptions" : "-N 1 -n ${params.threads} -t 04:00:00"
+    clusterOptions="-N 1 -n 40 -t 04:00:00"
 
-    withName:stats.sh {
+    withName:gfa2fasta_stats_dot_sh {
+        container = 'bryce911/bbtools'
+    }
+    withName:ragtag_stats_dot_sh {
+        container = 'bryce911/bbtools'
+    }
+    withName:sshquis_stats_do_sh {
         container = 'bryce911/bbtools'
     }
     withName:HiFiAdapterFilt {
@@ -14,13 +20,13 @@ process {
     withName:gfa2fasta {
         container = 'pvstodghill/any2fasta'
     }
-    withName:ragtag.py {
+    withName:ragtag_dot_py {
         container = 'dmolik/ragtag'
     }
     withName:hicstuff {
         container = 'koszullab/hicstuff' 
     }
-    withName:Shhquis.jl {
+    withName:Shhquis_dot_jl {
         container = 'dmolik/shhquis'
     }
     withName:faidx {
