--- a/otb.cfg
+++ b/otb.cfg
@@ -1,6 +1,6 @@
 process {
     executor='slurm'
-    clusterOptions="-N 1 -n 40 -t 04:00:00"
+    clusterOptions="-N 1 -n 40 -t 96:00:00 -p long"
 
     withName:gfa2fasta_stats_dot_sh {
         container = 'bryce911/bbtools'
