now you've done it

--- a/otb.cfg
+++ b/otb.cfg
@@ -15,7 +15,7 @@ process {
         container = 'dmolik/pbadapterfilt'
     }
     withName:HiFiASM {
-        container = "dmolik/hifiasm'
+        container = 'dmolik/hifiasm'
     }
     withName:gfa2fasta {
         container = 'pvstodghill/any2fasta'
