I like my samtools rollout more

--- a/otb.cfg
+++ b/otb.cfg
@@ -30,7 +30,7 @@ process {
         container = 'dmolik/shhquis'
     }
     withName:faidx {
-        container = 'biocontainers/samtools:v1.9-4-deb_cv1'
+        container = 'dmolik/samtools'
     }
 }
 
