all remote install is now an option

--- a/config/sge.cfg
+++ b/config/sge.cfg
@@ -1,8 +1,10 @@
 process {
     executor='sge'
     penv = 'smp'
+    clusterOptions = '-pty y'
 }
 
 singularity {
     enabled = true
+    engineOptions = "-d -v"
 }
