added labels to all of the jobs

--- a/config/slurm_usda.cfg
+++ b/config/slurm_usda.cfg
@@ -1,6 +1,16 @@
 process {
     executor='slurm'
     clusterOptions="-N 1 -p medium"
+
+    withLabel: short {
+      queue = 'short'
+}
+    withLabel: medium {
+      queue = 'medium'
+    }
+    withLabel: long {
+      queue = 'long'
+    }
 }
 
 singularity {
