added mem option to usda runs

--- a/config/slurm_usda.cfg
+++ b/config/slurm_usda.cfg
@@ -1,10 +1,10 @@
 process {
     executor='slurm'
-    clusterOptions="-N 1 -p medium"
+    clusterOptions="-N 1"
 
     withLabel: short {
       queue = 'short'
-}
+    }
     withLabel: medium {
       queue = 'medium'
     }
