--- a/config/slurm_usda_mem.cfg
+++ b/config/slurm_usda_mem.cfg
@@ -1,6 +1,16 @@
 process {
     executor='slurm'
-    clusterOptions="-N 1 -p mem"
+    clusterOptions="-N 1"
+
+    withLabel: short {
+      queue = 'short'
+}
+    withLabel: medium {
+      queue = 'medium'
+    }
+    withLabel: long {
+      queue = 'mem'
+    }
 }
 
 singularity {
