short can not be used as a label

--- a/config/slurm_usda_mem.cfg
+++ b/config/slurm_usda_mem.cfg
@@ -2,13 +2,13 @@ process {
     executor='slurm'
     clusterOptions="-N 1"
 
-    withLabel: short {
+    withLabel: shortq {
       queue = 'short'
 }
-    withLabel: medium {
+    withLabel: mediumq {
       queue = 'medium'
     }
-    withLabel: long {
+    withLabel: longq {
       queue = 'mem'
     }
 }
